// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor component should render correctly 1`] = `
<FormGroup
  legendText="foo"
>
  <Controlled
    className="miq-codemirror "
    editorDidMount={[Function]}
    onBeforeChange={[Function]}
    onChange={[MockFunction]}
    options={
      Object {
        "autoCloseBrackets": true,
        "gutters": Array [
          "CodeMirror-lint-markers",
        ],
        "lineNumbers": true,
        "lineWrapping": true,
        "lint": true,
        "mode": "yaml",
        "styleActiveLine": true,
        "theme": "eclipse",
      }
    }
    style={
      Object {
        "height": "auto",
      }
    }
  />
  <HelperTextBlock />
</FormGroup>
`;

exports[`CodeEditor component should render mode switches 1`] = `
<FormGroup
  legendText="foo"
>
  <RadioButtonGroup
    name="--undefined--mode"
    onChange={[Function]}
    valueSelected="yaml"
  >
    <RadioButton
      key="yaml"
      labelText="yaml"
      value="yaml"
    />
    <RadioButton
      key="json"
      labelText="json"
      value="json"
    />
  </RadioButtonGroup>
  <Controlled
    className="miq-codemirror "
    editorDidMount={[Function]}
    onBeforeChange={[Function]}
    onChange={[MockFunction]}
    options={
      Object {
        "autoCloseBrackets": true,
        "gutters": Array [
          "CodeMirror-lint-markers",
        ],
        "lineNumbers": true,
        "lineWrapping": true,
        "lint": true,
        "mode": "yaml",
        "styleActiveLine": true,
        "theme": "eclipse",
      }
    }
    style={
      Object {
        "height": "auto",
      }
    }
  />
  <HelperTextBlock />
</FormGroup>
`;
